examples/test/testpolicy17955.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17955
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key43: value48
      key15: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value4
          key21: value21
      podSelector:
        matchLabels:
          key41: value32
          key13: value16
          key0: value48
